# repo09

./: Apptainer.muninn.learn  Apptainer.muninn.plan  Apptainer.muninn_10h.learn  CMakeLists.txt  README.md
containers/: Apptainer.gpu.test  Dockerfile  test_gpu.py
containers/cuda_cudnn/: Dockerfile
src/: CMakeLists.txt  approximation.cpp  classes.cpp  helpers.cpp  helpers.hpp  ipc_plan.cpp  ipc_train.cpp  plan.cpp  search.cpp  state_space.cpp  train.cpp  train_dl.cpp  train_dl.hpp  train_ol.cpp  train_ol.hpp  train_rl.cpp  train_rl.hpp
src/private/: CMakeLists.txt
src/private/algorithms/: CMakeLists.txt  weisfeiler_leman.cpp  weisfeiler_leman.hpp
src/private/datasets/: CMakeLists.txt  balanced_dataset.cpp  balanced_dataset.hpp  dataset.hpp  fixed_size_dataset.cpp  fixed_size_dataset.hpp  random_dataset.cpp  random_dataset.hpp
src/private/experiments/: CMakeLists.txt  cosine_annealing_lr.cpp  cosine_annealing_lr.hpp  dataset_experiment.cpp  dataset_experiment.hpp  debug.hpp  fixed_horizon_policy_gradient.cpp  fixed_horizon_policy_gradient.hpp  fixed_horizon_reinforce.cpp  fixed_horizon_reinforce.hpp  fixed_horizon_reinforce_baseline.cpp  fixed_horizon_reinforce_baseline.hpp  fixed_horizon_value_base.cpp  fixed_horizon_value_base.hpp  image_supervised_optimal.cpp  image_supervised_optimal.hpp  monte_carlo_experiment.cpp  monte_carlo_experiment.hpp  policy_actor_critic.cpp  policy_actor_critic.hpp  policy_dataset_experiment.cpp  policy_dataset_experiment.hpp  policy_evaluation.cpp  policy_evaluation.hpp  policy_evaluation_utils.cpp  policy_evaluation_utils.hpp  policy_iterative_tabular_evaluation.cpp  policy_iterative_tabular_evaluation.hpp  policy_iterative_tabular_probability.cpp  policy_iterative_tabular_probability.hpp  policy_model_actor_critic.cpp  policy_model_actor_critic.hpp  policy_probability.cpp  policy_probability.hpp  policy_suboptimal_model_actor_critic.cpp  policy_suboptimal_model_actor_critic.hpp  policy_supervised_optimal.cpp  policy_supervised_optimal.hpp  policy_tabular_model_actor_critic.cpp  policy_tabular_model_actor_critic.hpp  (+8 more)
src/private/experiments/returns/: cumulative_return_function.cpp  cumulative_return_function.hpp  lambda_return_function.cpp  lambda_return_function.hpp  n_step_return_function.cpp  n_step_return_function.hpp  return_function.hpp
src/private/experiments/rewards/: blind_reward_function.cpp  blind_reward_function.hpp  optimal_reward_function.cpp  optimal_reward_function.hpp  reward_function.hpp
src/private/experiments/validations/: evaluation.hpp  exact_policy_evaluation.cpp  exact_policy_evaluation.hpp  trajectory_policy_evaluation.cpp  trajectory_policy_evaluation.hpp
src/private/experiments/values/: CMakeLists.txt  optimal_value_function.cpp  optimal_value_function.hpp  value_functions.cpp  value_functions.hpp
src/private/formalism/: CMakeLists.txt  action.cpp  problem.cpp  state.cpp  state.hpp
src/private/libraries/: CMakeLists.txt  map_functions.hpp  murmurhash3.cpp  murmurhash3.hpp
src/private/libraries/microtar/: microtar.c  microtar.h
src/private/libraries/tclap/: Arg.h  ArgContainer.h  ArgException.h  ArgGroup.h  CmdLine.h  CmdLineInterface.h  CmdLineOutput.h  DeferDelete.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  MultiArg.h  MultiSwitchArg.h  OptionalUnlabeledTracker.h  StandardTraits.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  Visitor.h  sstream.h
src/private/models/: CMakeLists.txt  convolutional_neural_network.cpp  convolutional_neural_network.hpp  relational_message_passing_neural_network.cpp  relational_message_passing_neural_network.hpp  relational_neural_network.cpp  relational_neural_network.hpp  relational_neural_network_base.cpp  relational_neural_network_base.hpp  relational_transformer.cpp  relational_transformer.hpp  utils.cpp  utils.hpp
src/private/models/modules/: CMakeLists.txt  binarization_function.cpp  binarization_function.hpp  convolutional_smooth_maximum_module.cpp  convolutional_smooth_maximum_module.hpp  mlp_module.cpp  mlp_module.hpp  multihead_attention_module.cpp  multihead_attention_module.hpp  readout_module.cpp  readout_module.hpp  relation_module.cpp  relation_module.hpp  relational_message_passing_module.cpp  relational_message_passing_module.hpp
src/private/pddl/: CMakeLists.txt
src/private/planners/: CMakeLists.txt  astar_search.cpp  astar_search.hpp  batched_astar_search.cpp  batched_astar_search.hpp  batched_bfs_search.cpp  batched_bfs_search.hpp  bfs_search.cpp  bfs_search.hpp  policy_search.cpp  policy_search.hpp  search_base.cpp  search_base.hpp  search_statistics.hpp  state_space.cpp  state_space.hpp  system.cpp  system.hpp  value_decomposition_search.cpp  value_decomposition_search.hpp  value_lookahead_search.cpp  value_lookahead_search.hpp  value_search.cpp  value_search.hpp
src/private/planners/conditions/: always_condition.cpp  always_condition.hpp  condition_base.cpp  condition_base.hpp  goal_condition.cpp  goal_condition.hpp  one_novelty_condition.cpp  one_novelty_condition.hpp  two_novelty_condition.cpp  two_novelty_condition.hpp  weisfeiler_leman_condition.cpp  weisfeiler_leman_condition.hpp
src/private/planners/generators/: CMakeLists.txt  applicable_actions_naive_generator.cpp  applicable_actions_naive_generator.hpp  grounded_successor_generator.hpp  lifted_schema_successor_generator.cpp  lifted_schema_successor_generator.hpp  lifted_successor_generator.hpp  successor_generator.hpp  successor_generator_factory.hpp
src/private/planners/heuristics/: blind_heuristic.cpp  blind_heuristic.hpp  h2.cpp  h2.hpp  heuristic_base.cpp  heuristic_base.hpp  relational_neural_network_heuristic.cpp  relational_neural_network_heuristic.hpp  scale_heuristic.cpp  scale_heuristic.hpp
src/private/schemas/: states.fbs  states.h
tools/: log_to_graph.py
