file(GLOB SRC_FILES "*.cpp")
add_library(planners STATIC ${SRC_FILES})
target_link_libraries(planners "${TORCH_LIBRARIES}")
target_link_libraries(planners algorithms)
target_link_libraries(planners formalism)
target_link_libraries(planners model)
add_subdirectory(heuristics)
add_subdirectory(generators)
add_subdirectory(conditions)
